# inventory

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  TODO.md  add_test_items.sh  docker-compose.yml  kubernetes.yml
backend/: Cargo.toml  Dockerfile.local_dev
backend/src/: api.rs  db.rs  item.rs  main.rs  model.rs
frontend/: Dockerfile.local_dev  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: BarcodeScanner.vue  ItemAPI.js  ItemAPI.ts  ItemList.vue  Label.vue  ScannerModal.vue  SingleItem.vue
