[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27", features = ["bundled", "chrono"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }